May 03, 2023
  implemented FileSystemLock in TermStatsLoader: only one instance of TermStatsLoader could be running in a JVM

Apr 25, 2023
  updated CL source to CL release v2023-04-20

Apr 21, 2023
  EfoBulkLoad updated to load HP/MP mappings

Apr 11, 2023
  updated CL source to CL release v2023-03-21
  enhanced parsing of date fields

Apr 06, 2023
  better EFO ontology loading for EFO:BAO terms

Apr 05, 2023
  fixed EFO ontology loading -- was spuriously adding 'EFO:GO:xxxxxxx' terms with 'BP','CC','MF' ont_id

Apr 04, 2023
  fixed generate_obo_file.sh

Mar 17, 2023
  further improvements in loading EFO ontology

Mar 10, 2023
  EFO xrefs loading tune up

Mar 09, 2023
  implemented loading of EFO ontology -- first attempt

Mar 06, 2023
  updated EfoMapper to limit EFO terms to EFO terms appearing in GWAS data

Mar 02, 2023
  updated EfoBulkLoad to also load synonyms

Feb 17, 2023
  updated build.gradle to be gradle 6.x + compatible
  updated CL source to CL release v2023-02-15
  DoQC: optimized code

Jan 20, 2023
  updated source for CL ontology
  removed unused jar dependency
  suppressed dag deletion for malformed obo files

Nov 01, 2022
  DO-QC: added extensive qc of MESH ids

Oct 25, 2022
  EfoBulkLoad: allows to bulk load EFO/MONDO synonyms from a file

Oct 05, 2022
  OmimPsCustomDoTermMapper: tune up (to handle situation where one OMIM:PS is associated with multiple RDO terms)

Aug 26, 2022
  parser: tuned up logging

Aug 01, 2022
  parser: better handling of MESH ids
  EFO-to-RDO mapper: finished EFO-to-MP and EFO-to-HP mappers

Jul 26, 2022
  fix to prevent erroneous deletion of dags / obsoletion of terms
  MP ontology: added loading of ORCID ids into 'created_by' field
  EFO-to-RDO mapper: refactored code to allow adding EFO-to-MP and EFO-to-HP mappers in the future

Jul 22, 2022
  added EFO-to-RDO mapper

Jun 21, 2022
  TaxonConstraints: fixed a bug preventing proper generation and cleanup of Not4Curation synonyms for GO terms

Jun 06, 2022